@@ -1,3 +1,10 @@
+2009-09-27  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* misc/network.c, misc/services.c: Resolved libopenvas.h by
+	respective single includes.
+
+	* misc/ids_send.h: Added missing include.
+
 2009-09-26  Matthew Mundell <matthew.mundell@intevation.de>
 
 	* omp/omp.c (omp_create_lsc_credential, omp_delete_lsc_credential): New
